# ir-project

./: .gitignore  README.md  app.py  hello.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data_retrieval/: exploration.ipynb  kochwiki_parser.py  kochwiki_scraper.py  scraping.ipynb
data_retrieval/exploration/: bm25.ipynb  sentence_embedding.ipynb
exploration/: bm25.ipynb  haystack.ipynb  keyword_search.ipynb  sentence_embedding.ipynb
indexing/: build_index.py
notebooks/: demo.ipynb  test_evaluation.ipynb
search/: evaluate.py  retrieval.py  search.py  test_evaluation.ipynb
test/: test_parser.ipynb  test_scraper.ipynb
